catkin_ws/logs/backend/build.make.053.log.stderr
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: In function ‘int main()’:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:82:2: error: ‘AsusProLiveOpenNI2’ has not been declared
  AsusProLiveOpenNI2::start();
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:105:7: error: ‘AsusProLiveOpenNI2’ has not been declared
   if(!AsusProLiveOpenNI2::grab(frame)
       ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:106:3: error: expected ‘)’ before ‘{’ token
   {
   ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:110:2: error: expected primary-expression before ‘}’ token
  }
  ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:110:2: error: expected ‘;’ before ‘}’ token
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:117:13: error: ‘AsusProLiveOpenNI2’ has not been declared
   noError = AsusProLiveOpenNI2::grab(frame);
             ^
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp: At global scope:
/home/tuofeichen/SLAM/MAV-Project/catkin_ws/src/backend/src/main.cpp:59:13: warning: ‘void logPoseGraphNode(const SLAM::Frame&, const Isometry3d&)’ defined but not used [-Wunused-function]
 static void logPoseGraphNode(const Frame& frame, const Eigen::Isometry3d& pose)
             ^
make[2]: *** [CMakeFiles/backend.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/backend.dir/all] Error 2
make: *** [all] Error 2
